--- a/app/components/Task/Task.css
+++ b/app/components/Task/Task.css
@@ -122,6 +122,7 @@
     transform: translate(25px, 0px);
 
     transition: transform 600ms ease-in-out;
+    -webkit-transition: transform 600ms ease-in-out;
 }
 
 .activeSelector .before {
@@ -187,6 +188,7 @@
     transform: translate(5px, 0px);
 
     transition: transform 500ms ease-in-out, width 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out, width 500ms ease-in-out;
 }
 
 @keyframes slideInFromLeft {
